--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -73,7 +73,12 @@
     row-gap: 48px;
 }
 
+.skills__title {
+    text-align: center;
+}
+
 .progress__circle {
+    margin: 5px auto;
     width: 120px;
     height: 120px;
 }
